--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:theme="@style/Theme.EvenTEC"
         tools:targetApi="31">
         <activity
+            android:name=".VerEstadisticas"
+            android:exported="false" />
+        <activity
+            android:name=".Encuesta"
+            android:exported="false" />
+        <activity
+            android:name=".Propuesta"
+            android:exported="false" />
+        <activity
             android:name=".LobbyEstudiantesAdmin"
             android:exported="false" />
         <activity
