--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.EvenTEC"
         tools:targetApi="31">
         <activity
+            android:name=".RegistrarEstudiantes"
+            android:exported="false" />
+        <activity
+            android:name=".Estadisticas"
+            android:exported="false" />
+        <activity
             android:name=".VerEstadisticas"
             android:exported="false" />
         <activity
