--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.EvenTEC"
         tools:targetApi="31">
         <activity
+            android:name=".CancelarInscripcion"
+            android:exported="false" />
+        <activity
+            android:name=".Inscripcion"
+            android:exported="false" />
+        <activity
+            android:name=".MisEventos"
+            android:exported="false" />
+        <activity
+            android:name=".Eventos"
+            android:exported="false" />
+        <activity
             android:name=".GestionarActividad"
             android:exported="false" />
         <activity
