--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,9 @@
             android:name=".Comunicacion"
             android:exported="false" />
         <activity
+            android:name=".VerEventoTerminado"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
