--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
             android:name=".GestionarEstudiantes"
             android:exported="false" />
         <activity
+            android:name=".GestionarEvento"
+            android:exported="false" />
+        <activity
             android:name=".ConsultarEventos"
             android:exported="false" />
         <activity
